# autonomous_robot

./: CMakeLists.txt  README.md  execute.sh  package.xml  setup.py
include/automotive_robot_headers/: RobotController.hpp
launch/: turtle_motion.launch  turtle_motion.launch.rd
src/automotive_robot/: PaperFinder.py  Phase1ProcessingLib.py  Program_config.py  RobotGlobalVisionUpdate.py  RobotMotionController.cpp  RobotMotionControllerLib.cpp  RobotMovingController.cpp  RobotNodeMain.cpp  RobotRotateController.cpp  Robot_control_panel.py  Robot_csv_lib.py  Robot_draw_lib.py  Robot_goal_lib.py  Robot_lib.py  Robot_map_lib.py  Robot_paths_lib.py  Robot_sight_lib.py  Robot_world_lib.py  laser_subscriber.py  publisher.cpp  robot_motion_node_rd.cpp  test  testClass  testClass.cpp  test_find_configuration_space.py  transformerTest.py  trigger_node.py  unitTest.py
worlds/: house_gazebo_sim.world  test.world
worlds/house_gazebo_sim/: model.config  model.sdf
