<?xml version="1.0"?>
<package format="2">
  <name>automotive_robot</name>
  <version>0.1.0</version>
  <description>The automotive_robot package</description>

  <maintainer email="tranlongvi.2000@gmail.com">Vi Tran</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>test_module.py</exec_depend>
  <exec_depend>Program_config.py</exec_depend>
  <exec_depend>Robot_control_panel.py</exec_depend>
  <exec_depend>Robot_csv_lib.py</exec_depend>
  <exec_depend>Robot_draw_lib.py</exec_depend>
  <exec_depend>Robot_goal_lib.py</exec_depend>
  <exec_depend>Robot_lib.py</exec_depend>
  <exec_depend>Robot_map_lib.py</exec_depend>
  <exec_depend>Robot_paths_lib.py</exec_depend>
  <exec_depend>Robot_sight_lib.py</exec_depend>
  <exec_depend>Robot_world_lib.py</exec_depend>
  <exec_depend>Phase1ProcessingLib.py</exec_depend>
</package>
